# sim_db

./: .clang-format  .gitignore  .style.yapf  CMakeLists.txt  LICENCE.md  LICENSE  MANIFEST.in  Makefile  README.md  __init__.py  add_and_run.py  add_and_submit.py  add_comment.py  add_sim.py  cd_results.py  default_setting.txt  default_settings.txt  delete_sim.py  example_sim_params.txt  extract_params.py  generate_commands.py  handwritten_makefile  helpers.py  list_sim_db_commands.py  print_sim.py  read_params.py  readthedocs.yml  run_sim.py  settings.txt  setup.py  sim_db.c  sim_db.cpp  sim_db.h  sim_db.hpp  sim_db.py  submit_sim.py  submit_vilje.py  update_sim.py
.sim_db/: settings.txt
cmake/: sim_dbConfig.cmake
command_line_tool/: sdb  sim_db  sim_db_cd_results.sh
commands/: add_root_dir_to_path
doc/: Doxyfile  Makefile  requirements.txt
doc/source/: about.rst  c_sim_db.rst  command_line_tool.rst  commands.rst  conf.py  cpp_sim_db.rst  index.rst  make_index.rst  parameter_files.rst  purpose_and_features.rst  python_sim_db.rst  tips_and_recommendations.rst  use.rst
docs/: Doxyfile  Makefile  requirements.txt
docs/source/: about.rst  c_sim_db.rst  command_line_tool.rst  conf.py  cpp_sim_db.rst  fortran_sim_db.rst  index.rst  install_or_include.rst  parameter_files.rst  purpose_and_features.rst  python_sim_db.rst  tips_and_recommendations.rst  use.rst
example/: Makefile  example_commands.sh  example_program.c  example_program.cpp  example_program.py  example_sim_params.txt  extensive_example.c  extensive_example.cpp  extensive_example.py  minimal_example.c  minimal_example.cpp  minimal_example.py  params_extensive_c_example.txt  params_extensive_cpp_example.txt  params_extensive_python_example.txt  params_minimal_c_example.txt  params_minimal_cpp_example.txt  params_minimal_python_example.txt  run_all_extensive_examples_with_clean_up.sh  run_minimal_c_example_with_clean_up.sh  run_minimal_cpp_example_with_clean_up.sh  run_minimal_example_with_clean_up.sh  run_minimal_python_example_with_clean_up.sh  sim_params_example_c_program.txt  sim_params_example_cpp_program.txt  sim_params_example_python_program.txt
examples/: CMakeLists.txt  Makefile  example_commands.sh  example_program.c  extensive_example.c  extensive_example.cpp  extensive_example.f90  extensive_example.py  extra_params_example.txt  handwritten_makefile  minimal_example.f90  minimal_example.py  params_extensive_c_example.txt  params_extensive_cpp_example.txt  params_extensive_fortran_example.txt  params_extensive_python_example.txt  params_minimal_c_example.txt  params_minimal_cpp_example.txt  params_minimal_fortran_example.txt  params_minimal_python_example.txt  run_all_examples.py  run_all_examples.sh  run_all_extensive_examples_with_clean_up.sh  run_minimal_c_example_with_clean_up.sh  run_minimal_cpp_example_with_clean_up.sh  run_minimal_python_example_with_clean_up.sh
include/: sim_db.h  sim_db.hpp
lib/: Makefile  handwritten_makefile
sim_db/: __init__.py  __main__.py  sdb  sim_db  sim_db_cd.sh  sim_db_lib.py
sim_db/src_command_line_tool/: add_command_line_tool_to_path.py  command_line_tool.py
sim_db/src_command_line_tool/commands/: add_and_run.py  add_and_submit.py  add_column.py  add_comment.py  add_package_root_to_path.py  add_range_sim.py  add_sim.py  cd_results_dir.py  combine_dbs.py  default_settings.txt  delete_empty_columns.py  delete_results_dir.py  delete_sim.py  duplicate_and_run.py  duplicate_delete_and_run.py  duplicate_sim.py  extract_params.py  get.py  helpers.py  init.py  list_commands.py  list_print_configs.py  print_sim.py  run_serial_sims.py  run_sim.py  settings.py  submit_sim.py  update_sim.py
source_commands/: add_and_submit.py  add_column.py  add_sim.py  cd_results.py  combine_dbs.py  delete_empty_columns.py  delete_sim.py  extract_params.py  helpers.py  list_sim_db_commands.py  print_sim.py  run_sim.py  submit_sim.py  update_sim.py
src/: CMakeLists.txt  Makefile  add_command_line_tool_to_path.py  class_sim_db.f90  generate_commands.py  make_command_line_tool.py  sim_db.c  sim_db.cpp  sim_db.py  sim_db_c_interface.f90  sim_db_mod.f90
src/command_line_tool/: command_line_tool.py
src/command_line_tool/commands/: add_and_run.py  add_and_submit.py  add_column.py  add_comment.py  add_range_sim.py  add_root_dir_to_path.py  add_sim.py  combine_dbs.py  delete_empty_columns.py  delete_results_dir.py  delete_sim.py  duplicate_and_run.py  duplicate_sim.py  extract_params.py  get.py  helpers.py  init.py  list_commands.py  list_print_configs.py  print_sim.py  run_serial_sims.py  run_sim.py  settings.py  submit_sim.py  update_sim.py
src/commands/: add_and_run.py  add_and_submit.py  add_column.py  add_comment.py  add_range_sim.py  add_root_dir_to_path.py  add_sim.py  cd_results.py  combine_dbs.py  delete_empty_columns.py  delete_results_dir.py  delete_sim.py  duplicate_and_run.py  duplicate_sim.py  extract_params.py  helpers.py  list_print_configs.py  list_sim_db_commands.py  print_sim.py  run_serial_sims.py  run_sim.py  submit_sim.py  update_sim.py
src_c_and_cpp/: sim_db.c  sim_db.cpp
test/: Makefile  __init__.py  program.c  program.cpp  program.py  sim1_test_comb.db  sim2_test_comb.db  sim_params_c_program.txt  sim_params_cpp_program.txt  sim_params_python_program.txt  test_commands_and_functions.py
test/results/: .keep
tests/: CMakeLists.txt  Makefile  add_package_root_to_path.py  add_root_dir_to_path.py  common_test_helpers.py  handwritten_makefile  helpers.py  multithreading_and_processing.c  multithreading_and_processing.py  params_alias_error.txt  params_c_program.txt  params_cpp_program.txt  params_extra.txt  params_fortran_program.txt  params_python_program.txt  program.c  program.cpp  program.f90  program.py  sim1_test_comb.db  sim_params_c_program.txt  sim_params_cpp_program.txt  sim_params_python_program.txt  test_c_and_cpp_function.py  test_c_cpp_and_fortran_functions.py  test_commands.py  test_commands_and_functions.py  test_functions.py  test_multithreading_and_processing.py  test_python_functions.py
